--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -4,17 +4,17 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:firstname) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name("Name") %>:</strong></dt>
   <dd><%= @employee.firstname %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:lastname) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name("Surname") %>:</strong></dt>
   <dd><%= @employee.lastname %></dd>
   <dt><strong><%= model_class.human_attribute_name(:address) %>:</strong></dt>
   <dd><%= @employee.address %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:leaveAllowance) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name("Leave Allowance") %>:</strong></dt>
   <dd><%= @employee.leaveAllowance %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:leaveTaken) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name("Leave Taken") %>:</strong></dt>
   <dd><%= @employee.leaveTaken %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:monthlySalary) %>:</strong></dt>
+  <dt><strong><%= model_class.human_attribute_name("Monthly Salary") %>:</strong></dt>
   <dd><%= @employee.monthlySalary %></dd>
 </dl>
 
@@ -22,10 +22,11 @@
               employees_path, :class => 'btn btn-default'  %>
 <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_employee_path(@employee), :class => 'btn btn-default' %>
-<% if current_user.admin? %>             
+
+<%# if current_user.admin? %>             
     <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               employee_path(@employee),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
-<% end %>
+<%# end %>
