--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     Created by 
     <a href="https://ie.linkedin.com/in/emerthornbury" class="myA">Emer Thornbury. </a>
     <%# mail_to "thornburye@gmail.com", "Email link.", :encode "hex" %>
-     To see this page deployed in Heroku go to <a href= " https://mighty-inlet-5126.herokuapp.com" class="myA">here!</a>
+     To see this page deployed in Heroku go to <a href= "#" class="myA">here!</a>
     <ul>
         <li><%= link_to "Home",       root_path %></li>
         <li><%= link_to "Contact",    contact_path %></li>
