--- a/app/views/layouts/_navmenu.html.erb
+++ b/app/views/layouts/_navmenu.html.erb
@@ -11,14 +11,12 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse navbar-right">
         <ul class="nav navbar-nav">
-          <!--<li class="active"><a href="#">Home</a></li>-->
           <li><%= link_to "Home",         root_path %></li>
-          <li><%= link_to "Employees",    employees_path %></li>
-          <li><%= link_to "Requests",     requests_path %></li>
+          <li><%= link_to "Employees",    '#' %></li>
+          <li><%= link_to "Requests",     '#' %></li>
           <li><%= link_to "Calendar",     calendar_path %></li>
           <li><%= link_to "Contact",      contact_path %></li>
           <li><%#= link_to "Set up Leave", request_types_path %></li>
-              
          
         </ul>
       </div>
