--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,25 +1,29 @@
-<%- model_class = Request -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
-</div>
+<p id="notice"><%= notice %></p>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name("Start Date") %>:</strong></dt>
-  <dd><%= @request.startDate %></dd>
-  <dt><strong><%= model_class.human_attribute_name("End Date") %>:</strong></dt>
-  <dd><%= @request.endDate %></dd>
-  <dt><strong><%= model_class.human_attribute_name("Employee ID") %>:</strong></dt>
-  <dd><%= @request.Employee_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name("Request Type") %>:</strong></dt>
-  <dd><%= @request.status_type %></dd>
-</dl>
+<p>
+  <strong>Startdate:</strong>
+  <%= @request.startDate %>
+</p>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              requests_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_request_path(@request), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              request_path(@request),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<p>
+  <strong>Enddate:</strong>
+  <%= @request.endDate %>
+</p>
+
+<p>
+  <strong>Approved:</strong>
+  <%= @request.approved %>
+</p>
+
+<p>
+  <strong>Employee:</strong>
+  <%= @request.employee %>
+</p>
+
+<p>
+  <strong>Requesttype:</strong>
+  <%= @request.requestType %>
+</p>
+
+<%= link_to 'Edit', edit_request_path(@request) %> |
+<%= link_to 'Back', requests_path %>
