--- a/app/views/request_types/_form.html.erb
+++ b/app/views/request_types/_form.html.erb
@@ -1,44 +1,21 @@
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
+<%= form_for(@request_type) do |f| %>
+  <% if @request_type.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@request_type.errors.count, "error") %> prohibited this request_type from being saved:</h2>
 
-    <%= form_for @request_type, :html => { :class => "form-horizontal request_type" } do |f| %>
-    
-        <% if @request_type.errors.any? %>
-        <div id="error_expl" class="panel panel-danger">
-          <div class="panel-heading">
-            <h3 class="panel-title"><%= pluralize(@request_type.errors.count, "error") %> prohibited this request_type from being saved:</h3>
-          </div>
-          <div class="panel-body">
-            <ul>
-            <% @request_type.errors.full_messages.each do |msg| %>
-              <li><%= msg %></li>
-            <% end %>
-            </ul>
-          </div>
-        </div>
+      <ul>
+      <% @request_type.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
       <% end %>
-    
-      <div class="control-group">
-        <%= f.label "Description", :class => 'control-label' %>
-        <div class="controls">
-          <%= f.text_field :description, :class => 'form-control' %>
-        </div>
-        <%= error_span(@request_type[:description]) %>
-      </div>
-    <br>
-    
-    <div class="btn-group" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-         <%= f.submit "Create", class: "btn btn-primary" %>
-          <%#= f.submit nil, :class => 'btn btn-primary' %>
-      </div>
-      <div class="btn-group" role="group">
-          <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                request_types_path, class: 'btn btn-default' %>
-      </div>
+      </ul>
     </div>
-    <% end %>
-    
+  <% end %>
+
+  <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_field :description %>
   </div>
-  
-</div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
