--- a/app/views/request_types/index.html.erb
+++ b/app/views/request_types/index.html.erb
@@ -1,34 +1,25 @@
-<%- model_class = RequestType -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-<table class="table table-striped">
+<h1>Listing request_types</h1>
+
+<table>
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Description</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
+
   <tbody>
     <% @request_types.each do |request_type| %>
       <tr>
-        <td><%= link_to request_type.id, request_type_path(request_type) %></td>
         <td><%= request_type.description %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_request_type_path(request_type), :class => 'btn btn-default btn-xs' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      request_type_path(request_type),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
+        <td><%= link_to 'Show', request_type %></td>
+        <td><%= link_to 'Edit', edit_request_type_path(request_type) %></td>
+        <td><%= link_to 'Destroy', request_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_request_type_path,
-            :class => 'btn btn-primary' %>
+<br>
+
+<%= link_to 'New Request type', new_request_type_path %>
