--- a/app/views/request_types/new.html.erb
+++ b/app/views/request_types/new.html.erb
@@ -1,5 +1,5 @@
-<%- model_class = RequestType -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
-</div>
-<%= render :partial => 'form' %>
+<h1>New request_type</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', request_types_path %>
