--- a/app/views/request_types/show.html.erb
+++ b/app/views/request_types/show.html.erb
@@ -1,19 +1,9 @@
-<%- model_class = RequestType -%>
-<div class="page-header">
-  <h2><%=t '.title', :default => model_class.model_name.human.titleize %></h2>
-</div>
+<p id="notice"><%= notice %></p>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @request_type.description %></dd>
-</dl>
+<p>
+  <strong>Description:</strong>
+  <%= @request_type.description %>
+</p>
 
-<%= link_to t('.back', :default => t("helpers.links.back")),
-              request_types_path, :class => 'btn btn-default'  %>
-<%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_request_type_path(@request_type), :class => 'btn btn-default' %>
-<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              request_type_path(@request_type),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<%= link_to 'Edit', edit_request_type_path(@request_type) %> |
+<%= link_to 'Back', request_types_path %>
