--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,44 +1,33 @@
-<%- model_class = Request -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-    
-<table class="table table-striped">
+<h1>Listing requests</h1>
+
+<table>
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:Employee_id) %></th>
-      <th><%= model_class.human_attribute_name("Name") %></th>
-      <th><%# model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:startDate) %></th>
-      <th><%= model_class.human_attribute_name(:endDate) %></th>
-      <th><%= model_class.human_attribute_name(:status_type %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+      <th>Startdate</th>
+      <th>Enddate</th>
+      <th>Approved</th>
+      <th>Employee</th>
+      <th>Requesttype</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
+
   <tbody>
     <% @requests.each do |request| %>
       <tr>
-        <td><%= request.Employee_id %></td>
-        <td><%= request.Employee_id.firstname %></td>
         <td><%= request.startDate %></td>
         <td><%= request.endDate %></td>
-        <td><%= request.status_type %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_request_path(request), 
-                      :class => 'btn btn-default btn-xs' %>
-          
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      request_path(request),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-xs btn-danger' %>
-        </td>
+        <td><%= request.approved %></td>
+        <td><%= request.employee %></td>
+        <td><%= request.requestType %></td>
+        <td><%= link_to 'Show', request %></td>
+        <td><%= link_to 'Edit', edit_request_path(request) %></td>
+        <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_request_path,
-            :class => 'btn btn-primary' %>
+<br>
+
+<%= link_to 'New Request', new_request_path %>
