--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,10 +1,5 @@
-<%- model_class = Request -%>
+<h1>New request</h1>
 
-<div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], 
-  :model => model_class.model_name.human.titleize %></h1>
-</div>
+<%= render 'form' %>
 
-
-    
-    <%= render :partial => 'form' %>
+<%= link_to 'Back', requests_path %>
